# multi-term

./: .gitignore  AGENT2_COMPLETION_REPORT.md  AGENT2_TOKEN_TRACKER_SUMMARY.md  AGENT_2_COMPLETION_REPORT.md  ALL_PHASES_COMPLETE.md  ANIMATION_FIX_SUMMARY.md  ANIMATION_FIX_VERIFICATION.md  ANSI_RENDERING_FIXED.md  ARCHIVING_IMPLEMENTATION_SUMMARY.md  ARCHIVING_SYSTEM.md  ARCHIVING_VISUAL_DEMO.txt  AUTOCOMPLETE_DESIGN.md  AUTOCOMPLETE_VISUAL.txt  AUTO_SCROLL_DEMO.md  AUTO_SCROLL_IMPLEMENTATION_SUMMARY.md  AUTO_SCROLL_TOGGLE_IMPLEMENTATION.md  AUTO_SCROLL_USER_GUIDE.md  BRAILLE_ANIMATIONS_UPDATE.md  BUGFIX_SUMMARY.md  BUG_FIX_REPORT.md  CHANGELOG.md  CODEBLOCK_INTEGRATION.md  CODEBLOCK_VISUAL_DEMO.md  CODE_CHANGES.md  CODE_CHANGES_SUMMARY.md  COMPLETE_TEST.md  COMPREHENSIVE_TEST_RESULTS.md  CONTEXT_FIX_SUMMARY.md  CONTEXT_MENU_BUGFIX.md  CONTEXT_MENU_CHANGELOG.md  CONTEXT_MENU_COMPLETE.md  CONTEXT_MENU_DESIGN.md  CONTEXT_MENU_FIX_REPORT.md  CONTEXT_MENU_VISUAL_FIX.md  CONVERSATION_CONTEXT_FIX.md  COPY_ALL_OUTPUT_FEATURE.md  COPY_ALL_OUTPUT_FLOW.txt  CORE_MODULE_DOCUMENTATION.md  CORE_MODULE_IMPLEMENTATION_SUMMARY.md  CORE_MODULE_QUICK_REFERENCE.md  (+265 more)
claude_multi_terminal/: __init__.py  __main__.py  animations.py  app.py  archiver.py  config.py  lazy_loader.py  modes.py  performance.py  polish.py  theme.py  tutorial.py  types.py  visual_feedback.py  workspaces.py
claude_multi_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: IMPLEMENTATION-PLAN.md  PHASE4_API_INTEGRATION.md  PHASE_6_INTEGRATIONS.md  PUBLISHING.md  QUICK-REFERENCE.md  README.md  SEARCH_FEATURE.md  SEARCH_QUICKSTART.md  STATUS_BAR_ARCHITECTURE.md  STATUS_BAR_EXAMPLES.md  STATUS_BAR_INTEGRATION.md  USER-GUIDE.md
examples/: api_integration_demo.py  token_tracker_demo.py
server/: collaboration_server.py  websocket_handler.py
tests/: PHASE1_SUMMARY.txt  PHASE1_TEST_REPORT.md  PHASE2_TEST_REPORT.md  PHASE3_TEST_REPORT.md  PHASE4_STREAMING_TEST_REPORT.md  PHASE4_TEST_SUMMARY.txt  PHASE5_TEST_REPORT.md  README.md  phase2_test_results.txt  phase3_test_results.txt  phase4_test_results.txt  phase5_test_results.txt  phase5_test_summary.txt  run_all_phase1_tests.sh  test_api_integration.py  test_collaboration.py  test_collaboration_server.py  test_phase0_comprehensive.py  test_phase1_modal_system.py  test_phase1_performance.py  test_phase3_bsp_layout.py  test_phase4_streaming.py  (+3 more)
(+83 files in other folders)
