[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-multi-terminal"
version = "0.1.0"
description = "Multi-session terminal UI for Claude CLI with TUIOS-inspired window management"
authors = [
    {name = "Wallon Walusayi"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["terminal", "tui", "claude", "textual", "window-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]

dependencies = [
    "textual>=0.89.0",
    "rich>=13.0",
    "psutil>=5.9",
    "pyperclip>=1.8",
    "ptyprocess>=0.7",
    "anthropic>=0.39.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.7.0",
    "cryptography>=41.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
multi-term = "claude_multi_terminal.__main__:main"

[project.urls]
Homepage = "https://github.com/wallonwalusayi/claude-multi-terminal"
Repository = "https://github.com/wallonwalusayi/claude-multi-terminal"
Documentation = "https://github.com/wallonwalusayi/claude-multi-terminal/blob/main/README.md"

[tool.setuptools]
packages = ["claude_multi_terminal"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
